utilities updated, added fa variables, updates icon mixin, added faq, redid faq mobile version

--- a/src/index.html
+++ b/src/index.html
@@ -328,59 +328,86 @@
             <p>Still have unanswered questions and need to get in touch?</p>
           </div>
           <div class="main-wrapper__faq__container__faq-accordion">
-            <div class="main-wrapper__faq__container__faq-accordion__title
-            main-wrapper__faq__container__faq-accordion__title--border-radius">
-              <p>Is any of my personal information stored in the App?</p>
-              <i
-                class="main-wrapper__faq__container__faq-accordion__icon main-wrapper__faq__container__faq-accordion__icon--active fa-2xs"></i>
+            <div class="main-wrapper__faq__container__faq-accordion__container
+            main-wrapper__faq__container__faq-accordion__container--border-radius">
+              <div class="main-wrapper__faq__container__faq-accordion__container__title
+              main-wrapper__faq__container__faq-accordion__container__title--inner-shadow">
+                <p>Is any of my personal information stored in the App?</p>
+                <p>
+                  <i class="
+                  main-wrapper__faq__container__faq-accordion__container__icon 
+                  main-wrapper__faq__container__faq-accordion__container__icon--active "></i>
+                </p>
+              </div>
+              <div class="main-wrapper__faq__container__faq-accordion__container__content">
+                <p>
+                  Nunc duis id aenean gravida tincidunt eu, tempor ullamcorper.
+                  Viverra aliquam arcu, viverra et, cursus. Aliquet pretium
+                  cursus adipiscing gravida et consequat lobortis arcu velit.
+                  Nibh pharetra fermentum duis accumsan lectus non. Massa cursus
+                  molestie lorem scelerisque pellentesque. Nisi, enim, arcu
+                  purus gravida adipiscing euismod montes, duis egestas.
+                  Vehicula eu etiam quam tristique tincidunt suspendisse ut
+                  consequat.
+                </p>
+                <p>
+                  Ornare senectus fusce dignissim ut. Integer consequat in eu
+                  tortor, faucibus et lacinia posuere. Turpis sit viverra lorem
+                  suspendisse lacus aliquam auctor vulputate. Quis egestas
+                  aliquam nunc purus lacus, elit leo elit facilisi. Dignissim
+                  amet adipiscing massa integer.
+                </p>
+              </div>
             </div>
-            <div class="main-wrapper__faq__container__faq-accordion__content">
-              <p>
-                Nunc duis id aenean gravida tincidunt eu, tempor ullamcorper.
-                Viverra aliquam arcu, viverra et, cursus. Aliquet pretium
-                cursus adipiscing gravida et consequat lobortis arcu velit.
-                Nibh pharetra fermentum duis accumsan lectus non. Massa cursus
-                molestie lorem scelerisque pellentesque. Nisi, enim, arcu
-                purus gravida adipiscing euismod montes, duis egestas.
-                Vehicula eu etiam quam tristique tincidunt suspendisse ut
-                consequat.
-              </p>
-              <p>
-                Ornare senectus fusce dignissim ut. Integer consequat in eu
-                tortor, faucibus et lacinia posuere. Turpis sit viverra lorem
-                suspendisse lacus aliquam auctor vulputate. Quis egestas
-                aliquam nunc purus lacus, elit leo elit facilisi. Dignissim
-                amet adipiscing massa integer.
-              </p>
+            <div class="main-wrapper__faq__container__faq-accordion__container">
+              <div class="main-wrapper__faq__container__faq-accordion__container__title">
+                <p>What formats can I download my
+                  transaction history in?</p>
+                <p>
+                  <i class="main-wrapper__faq__container__faq-accordion__container__icon "></i>
+                </p>
+              </div>
             </div>
-            <div class="main-wrapper__faq__container__faq-accordion__title">
-              <p>What formats can I download my
-                transaction history in?</p>
-              <i class="main-wrapper__faq__container__faq-accordion__icon fa-2xs"></i>
+            <div class="main-wrapper__faq__container__faq-accordion__container">
+              <div class="main-wrapper__faq__container__faq-accordion__container__title">
+                <p>Can I schedule future transfers?</p>
+                <p>
+                  <i class="main-wrapper__faq__container__faq-accordion__container__icon "></i>
+                </p>
+              </div>
             </div>
-            <div class="main-wrapper__faq__container__faq-accordion__title">
-              <p>Can I schedule future transfers?</p>
-              <i class="main-wrapper__faq__container__faq-accordion__icon fa-2xs"></i>
+            <div class="main-wrapper__faq__container__faq-accordion__container">
+              <div class="main-wrapper__faq__container__faq-accordion__container__title">
+                <p>When can I use Banking App
+                  services?</p>
+                <p>
+                  <i class="main-wrapper__faq__container__faq-accordion__container__icon "></i>
+                </p>
+              </div>
             </div>
-            <div class="main-wrapper__faq__container__faq-accordion__title">
-              <p>When can I use Banking App
-                services?</p>
-              <i class="main-wrapper__faq__container__faq-accordion__icon fa-2xs"></i>
+            <div class="main-wrapper__faq__container__faq-accordion__container">
+              <div class="main-wrapper__faq__container__faq-accordion__container__title">
+                <p>Can I create my own password that is
+                  easy for me to remember?</p>
+                <p>
+                  <i class="main-wrapper__faq__container__faq-accordion__container__icon "></i>
+                </p>
+              </div>
             </div>
-            <div class="main-wrapper__faq__container__faq-accordion__title">
-              <p>Can I create my own password that is
-                easy for me to remember?</p>
-              <i class="main-wrapper__faq__container__faq-accordion__icon fa-2xs"></i>
-            </div>
-            <div class="main-wrapper__faq__container__faq-accordion__title">
-              <p>What happens if I forget or lose my
-                password?</p>
-              <i class="main-wrapper__faq__container__faq-accordion__icon fa-2xs"></i>
+            <div class="main-wrapper__faq__container__faq-accordion__container">
+              <div class="main-wrapper__faq__container__faq-accordion__container__title
+              main-wrapper__faq__container__faq-accordion__container__title--border-bottom">
+                <p>What happens if I forget or lose my
+                  password?</p>
+                <p>
+                  <i class="main-wrapper__faq__container__faq-accordion__container__icon "></i>
+                </p>
+              </div>
             </div>
           </div>
           <div class="main-wrapper__faq__container__faq-contact">
             <button data-btn="howdy" type="submit" class="main-wrapper__faq__container__faq-contact__contact-us-now-btn
-            main-wrapper__faq__container__faq-contact__contact-us-now-btn--primary">
+              main-wrapper__faq__container__faq-contact__contact-us-now-btn--primary">
               Contact us now
             </button>
           </div>
