Using AI to Write COmmiet messages now ;). Refactored button hover states using CSS variables, moved to _mixin.scss in abstract, and replaced old hover links with interactive-states. Fixed hero page icon hover.

--- a/src/index.html
+++ b/src/index.html
@@ -406,7 +406,8 @@
             </div>
           </div>
           <div class="main-wrapper__faq__container__faq-contact">
-            <button data-btn="howdy" type="submit" class="main-wrapper__faq__container__faq-contact__contact-us-now-btn
+            <button data-btn="howdy" type="submit" class="
+              main-wrapper__faq__container__faq-contact__contact-us-now-btn
               main-wrapper__faq__container__faq-contact__contact-us-now-btn--primary">
               Contact us now
             </button>
