Added contact card for desktop and tablet, created link mixin, and added padding utility

--- a/src/index.html
+++ b/src/index.html
@@ -411,6 +411,24 @@
               main-wrapper__faq__container__faq-contact__contact-us-now-btn--primary">
               Contact us now
             </button>
+
+
+            <div class="main-wrapper__faq__container__faq-contact__contact-card">
+              <img src="./assets/images/svg/contact-phone-icon.svg" alt="Contact Phone Icon">
+              <p>Still have questions?</p>
+              <a class="main-wrapper__faq__container__faq-contact__contact-card--color-primary" href="#"
+                title="Contact us">Contact Us <i class="fa-solid fa-arrow-right fa-solid-base"></i></a>
+            </div>
+
+
+            <div class="main-wrapper__faq__container__faq-contact__contact-card">
+              <img src="./assets/images/svg/contact-chat.svg" alt="Contact Phone Icon">
+              <p>Don't like phone calls?</p>
+              <a class="main-wrapper__faq__container__faq-contact__contact-card--color-green" href="#"
+                title="Contact us">Contact Us <i class="fa-solid fa-arrow-right fa-solid-base"></i></a>
+            </div>
+
+
           </div>
       </section>
     </main>
