--- a/src/index.html
+++ b/src/index.html
@@ -328,43 +328,41 @@
             <p>Still have unanswered questions and need to get in touch?</p>
           </div>
           <div class="main-wrapper__faq__container__faq-accordion">
-            <div class="main-wrapper__faq__container__faq-accordion__container
-            main-wrapper__faq__container__faq-accordion__container--border-radius">
-              <div class="main-wrapper__faq__container__faq-accordion__container__title
-              main-wrapper__faq__container__faq-accordion__container__title--inner-shadow">
+            <div
+              class="main-wrapper__faq__container__faq-accordion__container main-wrapper__faq__container__faq-accordion__container--border-radius">
+              <div
+                class="main-wrapper__faq__container__faq-accordion__container__title main-wrapper__faq__container__faq-accordion__container__title--inner-shadow">
                 <p>Is any of my personal information stored in the App?</p>
                 <p>
-                  <i class="
-                  main-wrapper__faq__container__faq-accordion__container__icon 
-                  main-wrapper__faq__container__faq-accordion__container__icon--active "></i>
+                  <i
+                    class="main-wrapper__faq__container__faq-accordion__container__icon main-wrapper__faq__container__faq-accordion__container__icon--active"></i>
                 </p>
               </div>
               <div class="main-wrapper__faq__container__faq-accordion__container__content">
                 <p>
-                  Nunc duis id aenean gravida tincidunt eu, tempor ullamcorper.
-                  Viverra aliquam arcu, viverra et, cursus. Aliquet pretium
-                  cursus adipiscing gravida et consequat lobortis arcu velit.
-                  Nibh pharetra fermentum duis accumsan lectus non. Massa cursus
-                  molestie lorem scelerisque pellentesque. Nisi, enim, arcu
-                  purus gravida adipiscing euismod montes, duis egestas.
-                  Vehicula eu etiam quam tristique tincidunt suspendisse ut
-                  consequat.
+                  Nunc duis id aenean gravida tincidunt eu, tempor
+                  ullamcorper. Viverra aliquam arcu, viverra et, cursus.
+                  Aliquet pretium cursus adipiscing gravida et consequat
+                  lobortis arcu velit. Nibh pharetra fermentum duis accumsan
+                  lectus non. Massa cursus molestie lorem scelerisque
+                  pellentesque. Nisi, enim, arcu purus gravida adipiscing
+                  euismod montes, duis egestas. Vehicula eu etiam quam
+                  tristique tincidunt suspendisse ut consequat.
                 </p>
                 <p>
                   Ornare senectus fusce dignissim ut. Integer consequat in eu
-                  tortor, faucibus et lacinia posuere. Turpis sit viverra lorem
-                  suspendisse lacus aliquam auctor vulputate. Quis egestas
-                  aliquam nunc purus lacus, elit leo elit facilisi. Dignissim
-                  amet adipiscing massa integer.
+                  tortor, faucibus et lacinia posuere. Turpis sit viverra
+                  lorem suspendisse lacus aliquam auctor vulputate. Quis
+                  egestas aliquam nunc purus lacus, elit leo elit facilisi.
+                  Dignissim amet adipiscing massa integer.
                 </p>
               </div>
             </div>
             <div class="main-wrapper__faq__container__faq-accordion__container">
               <div class="main-wrapper__faq__container__faq-accordion__container__title">
-                <p>What formats can I download my
-                  transaction history in?</p>
+                <p>What formats can I download my transaction history in?</p>
                 <p>
-                  <i class="main-wrapper__faq__container__faq-accordion__container__icon "></i>
+                  <i class="main-wrapper__faq__container__faq-accordion__container__icon"></i>
                 </p>
               </div>
             </div>
@@ -372,64 +370,88 @@
               <div class="main-wrapper__faq__container__faq-accordion__container__title">
                 <p>Can I schedule future transfers?</p>
                 <p>
-                  <i class="main-wrapper__faq__container__faq-accordion__container__icon "></i>
+                  <i class="main-wrapper__faq__container__faq-accordion__container__icon"></i>
                 </p>
               </div>
             </div>
             <div class="main-wrapper__faq__container__faq-accordion__container">
               <div class="main-wrapper__faq__container__faq-accordion__container__title">
-                <p>When can I use Banking App
-                  services?</p>
+                <p>When can I use Banking App services?</p>
                 <p>
-                  <i class="main-wrapper__faq__container__faq-accordion__container__icon "></i>
+                  <i class="main-wrapper__faq__container__faq-accordion__container__icon"></i>
                 </p>
               </div>
             </div>
             <div class="main-wrapper__faq__container__faq-accordion__container">
               <div class="main-wrapper__faq__container__faq-accordion__container__title">
-                <p>Can I create my own password that is
-                  easy for me to remember?</p>
                 <p>
-                  <i class="main-wrapper__faq__container__faq-accordion__container__icon "></i>
+                  Can I create my own password that is easy for me to
+                  remember?
+                </p>
+                <p>
+                  <i class="main-wrapper__faq__container__faq-accordion__container__icon"></i>
                 </p>
               </div>
             </div>
             <div class="main-wrapper__faq__container__faq-accordion__container">
-              <div class="main-wrapper__faq__container__faq-accordion__container__title
-              main-wrapper__faq__container__faq-accordion__container__title--border-bottom">
-                <p>What happens if I forget or lose my
-                  password?</p>
+              <div
+                class="main-wrapper__faq__container__faq-accordion__container__title main-wrapper__faq__container__faq-accordion__container__title--border-bottom">
+                <p>What happens if I forget or lose my password?</p>
                 <p>
-                  <i class="main-wrapper__faq__container__faq-accordion__container__icon "></i>
+                  <i class="main-wrapper__faq__container__faq-accordion__container__icon"></i>
                 </p>
               </div>
             </div>
           </div>
           <div class="main-wrapper__faq__container__faq-contact">
-            <button data-btn="howdy" type="submit" class="
-              main-wrapper__faq__container__faq-contact__contact-us-now-btn
-              main-wrapper__faq__container__faq-contact__contact-us-now-btn--primary">
+            <button data-btn="howdy" type="submit"
+              class="main-wrapper__faq__container__faq-contact__contact-us-now-btn main-wrapper__faq__container__faq-contact__contact-us-now-btn--primary">
               Contact us now
             </button>
-
-
             <div class="main-wrapper__faq__container__faq-contact__contact-card">
-              <img src="./assets/images/svg/contact-phone-icon.svg" alt="Contact Phone Icon">
+              <img src="./assets/images/svg/contact-phone-icon.svg" alt="Contact Phone Icon" />
               <p>Still have questions?</p>
               <a class="main-wrapper__faq__container__faq-contact__contact-card--color-primary" href="#"
-                title="Contact us">Contact Us <i class="fa-solid fa-arrow-right fa-solid-base"></i></a>
+                title="Contact us">Contact Us
+                <i class="fa-solid fa-arrow-right fa-solid-base"></i></a>
             </div>
-
 
             <div class="main-wrapper__faq__container__faq-contact__contact-card">
-              <img src="./assets/images/svg/contact-chat.svg" alt="Contact Phone Icon">
+              <img src="./assets/images/svg/contact-chat.svg" alt="Contact Phone Icon" />
               <p>Don't like phone calls?</p>
               <a class="main-wrapper__faq__container__faq-contact__contact-card--color-green" href="#"
-                title="Contact us">Contact Us <i class="fa-solid fa-arrow-right fa-solid-base"></i></a>
+                title="Contact us">Contact Us
+                <i class="fa-solid fa-arrow-right fa-solid-base"></i></a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Subscription Section -->
+      <section aria-label="Subscribe to our newsletter" class="main-wrapper__subscribe">
+        <div class="main-wrapper__subscribe__container">
+          <div class="main-wrapper__subscribe__container__wrapper">
+            <div
+              class="main-wrapper__subscribe__container__wrapper__flex main-wrapper__subscribe__container__wrapper__flex--display-flex">
+              <img src="./assets/images/svg/subscribe-bell.svg" alt="Image Bell" />
+              <h4>Subscribe to our newsletter</h4>
+              <h4>
+                Subscribe to our newsletter to stay informed about latest
+                updates
+              </h4>
             </div>
 
-
+            <div
+              class="main-wrapper__subscribe__container__wrapper__flex main-wrapper__subscribe__container__wrapper__flex--display-flex main-wrapper__subscribe__container__wrapper__flex--form">
+              <i class="fa-regular fa-lg fa-envelope fa-brand-base"></i>
+              <input placeholder="Your email" type="text" name="subscribe-form" title="Subscribe Form" />
+              <button data-btn="howdy" type="submit"
+                class="main-wrapper__subscribe__container__wrapper__flex__button main-wrapper__subscribe__container__wrapper__flex__button--primary">
+                Subscribe
+              </button>
+            </div>
           </div>
+        </div>
       </section>
     </main>
     <!-- Main Content End -->
