Added footer section now with responsive supports for mobile devices , project completed for basic grade

--- a/src/index.html
+++ b/src/index.html
@@ -426,7 +426,6 @@
           </div>
         </div>
       </section>
-
       <!-- Subscription Section -->
       <section aria-label="Subscribe to our newsletter" class="main-wrapper__subscribe">
         <div class="main-wrapper__subscribe__container">
@@ -455,6 +454,14 @@
       </section>
     </main>
     <!-- Main Content End -->
+
+    <!-- Footer Start -->
+    <footer class="footer-wrapper" aria-label="Footer Section">
+      <div class="footer-wrapper__footer-container">
+        <p>© 2024 Silicon. All rights reserved. Credit MadrasThemes</p>
+      </div>
+    </footer>
+    <!-- Footer End -->
   </div>
 
   <script type="module" src="./js/main.js"></script>
