Fixade en bugg Edge app länkar, La till Google Fonts, Fixade Dark mode element som hade fel färg

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
   <!-- Container Queries & Skeleton Structure -->
+
   <div class="skeleton-wrapper">
     <!-- Header & Navigation Inspired by Hans :)-->
     <header aria-label="Navigation & Logo" class="header_wrapper">
@@ -56,10 +57,14 @@
           <div class="hero-section__apps-links">
             <!-- Inspired by Hans for Dynamic Buttons ;)-->
             <a href="#" title="Apple Store Link" class="hero-section__apps-links__link-item">
-              <img class="hero-section__apps-links__link-item__apple" src="#" alt="Apple Store Image" />
+              <img class="hero-section__apps-links__link-item__apple"
+                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+                alt="Apple Store Image" />
             </a>
             <a href="#" title="Android Store Link" class="hero-section__apps-links__link-item">
-              <img class="hero-section__apps-links__link-item__android" src="#" alt="Android Store Image" />
+              <img class="hero-section__apps-links__link-item__android"
+                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+                alt="Android Store Image" />
             </a>
           </div>
           <div class="hero-section__discover-more">
@@ -468,6 +473,8 @@
     </footer>
     <!-- Footer End -->
   </div>
+
+
 </body>
 
 </html>
