Added just link to documentation to show the new version of the page in react :)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Manage All Your Money in One App" />
   <title>Silicon</title>
   <!-- https://favicon.io/favicon-generator/ -->
-  <link rel="icon" type="image/x-icon" href="./src/assets/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="src/assets/images/favicon.ico">
 </head>
 
 <body>
@@ -75,9 +75,9 @@
           <div class="hero-section__mobile-images">
             <div class="hero-section__mobile-images__image-wrapper">
               <img class="hero-section__mobile-images__image-wrapper__iphone-1"
-                src="./src/assets/images/svg/iphone-1.svg" alt="Iphone showing my cards section from Silicon AB app" />
+                src="src/assets/images/svg/iphone-1.svg" alt="Iphone showing my cards section from Silicon AB app" />
               <img class="hero-section__mobile-images__image-wrapper__iphone-2"
-                src="./src/assets/images/svg/iphone-2.svg" alt="Iphone showing my budget section from Silicon AB app" />
+                src="src/assets/images/svg/iphone-2.svg" alt="Iphone showing my budget section from Silicon AB app" />
             </div>
           </div>
         </div>
@@ -90,22 +90,22 @@
       <section aria-label="Company Logos" class="main-wrapper__company-logos">
         <div class="main-wrapper__company-logos__container">
           <div class="main-wrapper__company-logos__container__image-item" id="c-l-1">
-            <img src="./src/assets/images/svg/company-1.svg" alt="Company logo 1" />
+            <img src="src/assets/images/svg/company-1.svg" alt="Company logo 1" />
           </div>
           <div class="main-wrapper__company-logos__container__image-item" id="c-l-2">
-            <img src="./src/assets/images/svg/company-2.svg" alt="Company logo 2" />
+            <img src="src/assets/images/svg/company-2.svg" alt="Company logo 2" />
           </div>
           <div class="main-wrapper__company-logos__container__image-item" id="c-l-3">
-            <img src="./src/assets/images/svg/company-3.svg" alt="Company logo 3" />
+            <img src="src/assets/images/svg/company-3.svg" alt="Company logo 3" />
           </div>
           <div class="main-wrapper__company-logos__container__image-item" id="c-l-4">
-            <img src="./src/assets/images/svg/company-4.svg" alt="Company logo 4" />
+            <img src="src/assets/images/svg/company-4.svg" alt="Company logo 4" />
           </div>
           <div class="main-wrapper__company-logos__container__image-item" id="c-l-5">
-            <img src="./src/assets/images/svg/company-5.svg" alt="Company logo 5" />
+            <img src="src/assets/images/svg/company-5.svg" alt="Company logo 5" />
           </div>
           <div class="main-wrapper__company-logos__container__image-item" id="c-l-6">
-            <img src="./src/assets/images/svg/company-6.svg" alt="Company logo 6" />
+            <img src="src/assets/images/svg/company-6.svg" alt="Company logo 6" />
           </div>
         </div>
       </section>
@@ -113,7 +113,7 @@
       <section aria-label="App Features" class="main-wrapper__app-features">
         <div class="main-wrapper__app-features__container">
           <img class="main-wrapper__app-features__container__phone-image"
-            src="./src/assets/images/svg/phone-app-features.svg" alt="Iphone showing App features" />
+            src="src/assets/images/svg/phone-app-features.svg" alt="Iphone showing App features" />
           <div>
             <h1 class="main-wrapper__app-features__container__heading">
               App Features
@@ -126,7 +126,7 @@
             </p>
             <div class="main-wrapper__app-features__container__app-features-cards">
               <div class="main-wrapper__app-features__container__app-features-cards__card-container">
-                <img src="./src/assets/images/svg/credit-card.svg" alt="Easy Payment" />
+                <img src="src/assets/images/svg/credit-card.svg" alt="Easy Payment" />
                 <div class="main-wrapper__app-features__container__app-features-cards__card-container__card-item">
                   <h5>Easy Payments</h5>
                   <p>
@@ -136,7 +136,7 @@
                 </div>
               </div>
               <div class="main-wrapper__app-features__container__app-features-cards__card-container">
-                <img src="./src/assets/images/svg/shield.svg" alt="Security" />
+                <img src="src/assets/images/svg/shield.svg" alt="Security" />
                 <div class="main-wrapper__app-features__container__app-features-cards__card-container__card-item">
                   <h5>Data Security</h5>
                   <p>
@@ -146,7 +146,7 @@
                 </div>
               </div>
               <div class="main-wrapper__app-features__container__app-features-cards__card-container">
-                <img src="./src/assets/images/svg/bars-graphic.svg" alt="Cost Statistics" />
+                <img src="src/assets/images/svg/bars-graphic.svg" alt="Cost Statistics" />
                 <div class="main-wrapper__app-features__container__app-features-cards__card-container__card-item">
                   <h5>Cost Statistics</h5>
                   <p>
@@ -156,7 +156,7 @@
                 </div>
               </div>
               <div class="main-wrapper__app-features__container__app-features-cards__card-container">
-                <img src="./src/assets/images/svg/communication.svg" alt="Support 24/7" />
+                <img src="src/assets/images/svg/communication.svg" alt="Support 24/7" />
                 <div class="main-wrapper__app-features__container__app-features-cards__card-container__card-item">
                   <h5>Support 24/7</h5>
                   <p>
@@ -166,7 +166,7 @@
                 </div>
               </div>
               <div class="main-wrapper__app-features__container__app-features-cards__card-container">
-                <img src="./src/assets/images/svg/wallet.svg" alt="Regular Cashback" />
+                <img src="src/assets/images/svg/wallet.svg" alt="Regular Cashback" />
                 <div class="main-wrapper__app-features__container__app-features-cards__card-container__card-item">
                   <h5>Regular Cashback</h5>
                   <p>
@@ -176,7 +176,7 @@
                 </div>
               </div>
               <div class="main-wrapper__app-features__container__app-features-cards__card-container">
-                <img src="./src/assets/images/svg/happy.svg" alt="Regular Cashback" />
+                <img src="src/assets/images/svg/happy.svg" alt="Regular Cashback" />
                 <div class="main-wrapper__app-features__container__app-features-cards__card-container__card-item">
                   <h5>Top Standards</h5>
                   <p>
@@ -194,9 +194,9 @@
         <div class="main-wrapper__app-how-diw__container">
           <h1>How Does It Work?</h1>
           <div class="main-wrapper__app-how-diw__container__image-items">
-            <img id="how-phone-2" src="./src/assets/images/svg/how-phone-2.svg" alt="How does it work Phone 2" />
-            <img src="./src/assets/images/svg/how-phone-1.svg" alt="How does it work Phone 1" />
-            <img id="how-phone-3" src="./src/assets/images/svg/how-phone-3.svg" alt="How does it work Phone 3" />
+            <img id="how-phone-2" src="src/assets/images/svg/how-phone-2.svg" alt="How does it work Phone 2" />
+            <img src="src/assets/images/svg/how-phone-1.svg" alt="How does it work Phone 1" />
+            <img id="how-phone-3" src="src/assets/images/svg/how-phone-3.svg" alt="How does it work Phone 3" />
           </div>
           <h4>Transfers to people from your contact list</h4>
           <p>
@@ -234,17 +234,17 @@
           </div>
           <div class="main-wrapper__app-description__container__section">
             <img class="main-wrapper__app-description__container__section__balance-image"
-              src="./src/assets/images/svg/app-description-balance.svg" alt="App Balance Image" />
+              src="src/assets/images/svg/app-description-balance.svg" alt="App Balance Image" />
             <img class="main-wrapper__app-description__container__section__user-image"
-              src="./src/assets/images/svg/app-description-balance-user.svg" alt="App User Image" />
+              src="src/assets/images/svg/app-description-balance-user.svg" alt="App User Image" />
           </div>
         </div>
         <div class="main-wrapper__app-description__container">
           <div class="main-wrapper__app-description__container__section">
             <img class="main-wrapper__app-description__container__section__full-users-image"
-              src="./src/assets/images/svg/app-description-users.svg" alt="App Balance Image" />
+              src="src/assets/images/svg/app-description-users.svg" alt="App Balance Image" />
             <img class="main-wrapper__app-description__container__section__credit-card-image"
-              src="./src/assets/images/svg/app-description-credit-card.svg" alt="App User Image" />
+              src="src/assets/images/svg/app-description-credit-card.svg" alt="App User Image" />
           </div>
           <div class="main-wrapper__app-description__container__section">
             <div
@@ -252,14 +252,14 @@
               <h2>Receive payment from international bank details</h2>
               <div class="main-wrapper__app-description__container__section__text-wrapper--flex">
                 <div class="main-wrapper__app-description__container__section__text-wrapper__flex-box">
-                  <img src="./src/assets/images/svg/credit-card.svg" alt="Easy Payment" />
+                  <img src="src/assets/images/svg/credit-card.svg" alt="Easy Payment" />
                   <p>
                     Manage your payments online. Mollis congue egestas egestas
                     fermentum fames.
                   </p>
                 </div>
                 <div class="main-wrapper__app-description__container__section__text-wrapper__flex-box">
-                  <img src="./src/assets/images/svg/wallet.svg" alt="Easy Payment" />
+                  <img src="src/assets/images/svg/wallet.svg" alt="Easy Payment" />
                   <p>
                     A elementur and imperdiet enim, pretium etiam facilisi
                     aenean quam mauris.
@@ -283,7 +283,7 @@
           </div>
           <div class="main-wrapper__clients-app__container__client-test-card">
             <img class="main-wrapper__clients-app__container__client-test-card__icon"
-              src="./src/assets/images/svg/quoto-icon.svg" alt="Quote Icon" />
+              src="src/assets/images/svg/quoto-icon.svg" alt="Quote Icon" />
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
@@ -296,7 +296,7 @@
               turpis sit amet.
             </p>
             <div class="main-wrapper__clients-app__container__client-test-card__user-avatar">
-              <img src="./src/assets/images/svg/avatar-female.svg" alt="Female Avatar" />
+              <img src="src/assets/images/svg/avatar-female.svg" alt="Female Avatar" />
               <div>
                 <p>Fannie Summers</p>
                 <p>Designer</p>
@@ -305,7 +305,7 @@
           </div>
           <div class="main-wrapper__clients-app__container__client-test-card">
             <img class="main-wrapper__clients-app__container__client-test-card__icon"
-              src="./src/assets/images/svg/quoto-icon.svg" alt="Quote Icon" />
+              src="src/assets/images/svg/quoto-icon.svg" alt="Quote Icon" />
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
@@ -318,7 +318,7 @@
               nunc.
             </p>
             <div class="main-wrapper__clients-app__container__client-test-card__user-avatar">
-              <img src="./src/assets/images/svg/avatar-male.svg" alt="Female Avatar" />
+              <img src="src/assets/images/svg/avatar-male.svg" alt="Female Avatar" />
               <div>
                 <p>Albert Flores</p>
                 <p>Developer</p>
@@ -419,7 +419,7 @@
               Contact us now
             </button>
             <div class="main-wrapper__faq__container__faq-contact__contact-card">
-              <img src="./src/assets/images/svg/contact-phone-icon.svg" alt="Contact Phone Icon" />
+              <img src="src/assets/images/svg/contact-phone-icon.svg" alt="Contact Phone Icon" />
               <p>Still have questions?</p>
               <a class="main-wrapper__faq__container__faq-contact__contact-card--color-primary" href="#"
                 title="Contact us">Contact Us
@@ -427,7 +427,7 @@
             </div>
 
             <div class="main-wrapper__faq__container__faq-contact__contact-card">
-              <img src="./src/assets/images/svg/contact-chat.svg" alt="Contact Phone Icon" />
+              <img src="src/assets/images/svg/contact-chat.svg" alt="Contact Phone Icon" />
               <p>Don't like phone calls?</p>
               <a class="main-wrapper__faq__container__faq-contact__contact-card--color-green" href="#"
                 title="Contact us">Contact Us
@@ -442,7 +442,7 @@
           <div class="main-wrapper__subscribe__container__wrapper">
             <div
               class="main-wrapper__subscribe__container__wrapper__flex main-wrapper__subscribe__container__wrapper__flex--display-flex">
-              <img src="./src/assets/images/svg/subscribe-bell.svg" alt="Image Bell" />
+              <img src="src/assets/images/svg/subscribe-bell.svg" alt="Image Bell" />
               <h4>Subscribe to our newsletter</h4>
               <h4>
                 Subscribe to our newsletter to stay informed about latest
